client/app/styles/CommentModal.css
.model-display {
  padding: 20px;
  background: #fff;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  border-radius: 5px;
  width: 60%;
}

.tabs-container {
  width: 100%;
}

.tabs-divider {
  border-bottom: 1px solid #D3D3D3;
}

.comment-display {
  margin-bottom: 15px;
  border: none;
  max-height: 300px;
  overflow: auto;
}

.comment-display__individual-comment {
  background-color: rgb(247, 246, 246);
  margin: 10px;
  border-radius: 20px;
  width: 95%;
  padding: 5px;
  padding-left: 10px;
}

.solution-button-container {
  display: flex;
  justify-content: center;
}

